# factory

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
_codeql_build_dir/: Makefile
_codeql_build_dir/benchmarks/: Makefile
_codeql_build_dir/examples/: Makefile  example_basic
_codeql_build_dir/src/: Makefile  fm
_codeql_build_dir/tests/: Makefile  test_placeholder
benchmarks/: CMakeLists.txt
docs/: cli.md  dependencies.md  style.md
examples/: CMakeLists.txt  example_basic.cpp
scripts/: build.sh
src/: CMakeLists.txt  factory.cpp  main.cpp
tests/: CMakeLists.txt  test_placeholder.cpp
